Refactor code structure for improved readability and maintainability

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -24,6 +24,7 @@ const personalImageAlt = "Adrian Rodriguez";
   </div>
 
   <img
+    src="/public/adri.jpg"
     width="200"
     height="200"
     src="/me.png"
