--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,12 +11,12 @@ import TitleSection from "@/components/TitleSection.astro";
 ---
 
 <Layout title="Portfolio-Adrian R." description="Contrata a Adrian R. para crear tu aplicación web o móvil. Desarrollador Web.">
-  <main class="px-4">
+  <main class="px-4 sm:px-6 lg:px-8">
     <SectionContainer class="py-16 md:py-36">
       <Hero />
     </SectionContainer>
   </main>
-  <div class="space-y-24">
+  <div class="space-y-24 px-4 sm:px-6 lg:px-8">
     <SectionContainer id="proyectos">
       <TitleSection>
         <CodeIcon class="size-7" />
