Update layout title in index.astro for consistency

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Hero from "@/components/Hero.astro";
 import TitleSection from "@/components/TitleSection.astro";
 ---
 
-<Layout title="Portfolio-Adrian R." description="Contrata a Adrian R. para crear tu aplicación web o móvil. Desarrollador Web.">
+<Layout title="Adrian R." description="Contrata a Adrian R. para crear tu aplicación web o móvil. Desarrollador Web.">
   <main class="px-4 sm:px-6 lg:px-8">
     <SectionContainer class="py-16 md:py-36">
       <Hero />
