--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,23 +3,25 @@ const personalImageAlt = "Adrian Rodriguez";
 ---
 
 <article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
-  <div class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1">
+  <div
+    class="[&>p]:mb-4 [&>p>strong]:text-yellow-600 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono [&>p>strong]:text-md text-pretty order-2 md:order-1"
+  >
     <p>
-      Me llamo Adrián Rodríguez, soy <strong>Web Developer con un título en Desarrollo de Interfaces Web</strong>. Apasionado por la tecnología y el aprendizaje continuo, me enfoco
-      en construir aplicaciones eficientes, escalables y centradas en el usuario.
-    </p>
-
-    <p>
-      Me destaco por mi <strong>adaptabilidad, pensamiento crítico y habilidades para resolver problemas</strong>, siempre buscando crear código limpio, mantenible y con impacto.
+      Me enfoco en desarrollar aplicaciones <strong>eficientes</strong>, <strong>escalables</strong> y centradas en una <strong>experiencia de usuario moderna</strong> y bien estructurada.
+      <br />
+      <br />
+      Destaco por mi capacidad de <strong>adaptación</strong>, <strong>pensamiento crítico</strong> y enfoque en la <strong>resolución de problemas</strong>, siempre priorizando la
+      escritura de <strong>código limpio</strong>, mantenible y orientado a generar <strong>valor real</strong>.
     </p>
 
     <p>
       💻 <strong>Tech Stack:</strong><br />
-      <strong>Frontend:</strong> HTML5 · CSS3 · JavaScript · TypeScript · <br />
-      <strong>Backend:</strong> Node.js · Java<br />
-      stFrameworks y librerias: React · Angular · Tailwind · Bootstrap <br />
-      Base de datos: MySQL · MongoDB<br />
-      Herramientas: Vite · Git · REST APIs · Agile
+
+      Frontend: <span class="text-blue-600 dark:text-blue-400">HTML5 · CSS3 · JavaScript · TypeScript</span><br />
+      Backend: <span class="text-green-600 dark:text-green-400">Node.js · Java</span><br />
+      Frameworks y librerias: <span class="text-purple-600 dark:text-purple-400">React · Angular · Astro ·Tailwind · Bootstrap</span><br />
+      Base de datos: <span class="text-orange-600 dark:text-orange-400">MySQL · MongoDB</span><br />
+      Herramientas: <span class="text-pink-600 dark:text-pink-400">Vite · Git · REST APIs · Agile</span>
     </p>
   </div>
 
