--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -19,7 +19,7 @@ const personalImageAlt = "Adrian Rodriguez";
 
       Frontend: <span class="text-blue-600 dark:text-blue-400">HTML5 · CSS3 · JavaScript · TypeScript</span><br />
       Backend: <span class="text-green-600 dark:text-green-400">Node.js · Java</span><br />
-      Frameworks y librerias: <span class="text-purple-600 dark:text-purple-400">React · Angular · Astro ·Tailwind · Bootstrap</span><br />
+      Frameworks y librerias: <span class="text-purple-600 dark:text-purple-400">React · Astro · Tailwind · Bootstrap</span><br />
       Base de datos: <span class="text-orange-600 dark:text-orange-400">MySQL · MongoDB</span><br />
       Herramientas: <span class="text-pink-600 dark:text-pink-400">Vite · Git · REST APIs · Agile</span>
     </p>
@@ -28,7 +28,7 @@ const personalImageAlt = "Adrian Rodriguez";
   <img
     width="200"
     height="200"
-    src="/adri.JPG"
+    src="/adri.webp"
     alt={personalImageAlt}
     class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
     style="object-position: 50% 50%"
