--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ import SocialPill from "@/components/SocialPill.astro";
 
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
-    <img class="rounded-full shadow-lg size-16" src="/256-black.png" alt={personalImageAlt} />
+    <img class="rounded-full shadow-lg size-16" src="/256-black.webp" alt={personalImageAlt} />
     <a href="https://www.linkedin.com/in/adrian-rodriguez-fernandez/" target="_blank" rel="noopener" class="flex items-center transition md:justify-center md:hover:scale-105">
       <Badge>Disponible para trabajar</Badge>
     </a>
