Add CV icon component in Astro format

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,6 +5,7 @@ import LinkedInIcon from "@/components/icons/LinkedIn.astro";
 import MailIcon from "@/components/icons/Mail.astro";
 import GitHubICon from "./icons/GitHub.astro";
 import SocialPill from "@/components/SocialPill.astro";
+import Cv from "@/components/icons/Cv.astro";
 ---
 
 <div class="max-w-xl">
@@ -23,6 +24,10 @@ import SocialPill from "@/components/SocialPill.astro";
     <SocialPill href="mailto:rodriguezfadrian7@gmail.com">
       <MailIcon class="size-4" />
       Contáctame
+    </SocialPill>
+    <SocialPill href="/Adrian.R-Cv.pdf">
+      <Cv class="size-4" />
+      CV
     </SocialPill>
     <SocialPill href="https://www.linkedin.com/in/adrian-rodriguez-fernandez/">
       <LinkedInIcon class="size-4" />
